@@ -125,6 +125,15 @@ drain_timeout = 5
 # where it is but not lose any results.
 # terminate_files = &getenv("HOME")/mtt-stop,&scratch_root()/mtt-stop
 
+# OMPI Core: Specify a default description string that is used in the
+# absence of description strings in the MPI install, Test build, and
+# Test run sections.  The intent of this field is to record variable
+# data that is outside the scope, but has effect on the software under
+# test (e.g., firmware version of a NIC).  If no description string is
+# specified here and no description strings are specified below, the
+# description data field is left empty when reported.  
+# description = NIC firmware: &system("get_nic_firmware_rev")
+
 #----------------------------------------------------------------------
 
 [Lock]
